--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -136,7 +136,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/overview.jpg) no-repeat bottom center scroll;
+    background: url(../img/Web.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -255,7 +255,7 @@ a:focus {
     height:auto;
     padding: 0;
     color: #fff;
-    background: url(../img/computertable.jpg) no-repeat bottom center scroll;
+    background: url(../img/Web3.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -271,11 +271,12 @@ a:focus {
 
 #about , #contact{
     color: #000;
+    background:#85FF8A
 }
 
 #about{
     padding:50px 0 100px 0;
-     background: #18bc9c;
+     background: #85FF8A;
 }
 
 @media(min-width:767px) {
